# RocketOdds

./: .env.example  .gitignore  README.md  compose.yaml  config.yaml  requirements.txt
data/: Dockerfile  README.md  config.yaml  requirements.txt
data/calculateda/: .env.example  README.md  pyproject.toml  requirements.txt
data/calculateda/scripts/: config.py  main.py
data/db/: requirements.txt  schema.sql  seeds.sql
data/db/migrations/: V1_Initial_Setup.sql
data/db/seeds/: V1_seed_uploaders.sql  V2_seed_replays.sql  V3_seed_teams.sql  V4_seed_team_stats.sql  V5_seed_players.sql  V6_seed_replay_players.sql  V7_seed_player_stats.sql  populate_seeds.py  test_seeds.py
data/etl/: .env.example  Dockerfile  README.md  config.yaml  extract.py  load.py  main.py  pyproject.toml  requirements.txt  test_data.json  transform.py
data/etl/scripts/: config.py  extract.py  load.py  main.py  transform.py
data/rocketl/: .env.example  README.md  config.yaml  pyproject.toml  requirements.txt
data/rocketl/scripts/: config.py  extract.py  load.py  main.py  transform.py
